=======
HISTORY
=======

1.1rc8 (Unreleased)
-------------------

- Fix when editing contextuals portlets
  #117 http://plone.org/products/tinymce/issues/117
  [sylvainb]

- Added a widget option: toolbar_width
  [oliverroch]

- Fixed: "Normal paragraph" default style didn't reset css class
  [oliverroch]


1.1rc7 (2009-11-18)
-------------------

- Link and image drawers now look at INavigationRoot and not at IPloneSiteRoot.
  [robgietema, hannosch]

- Added support for LinguaPlone's translation aware reference handling to the
  new lookup_uid method.
  [hannosch]

- Removed translate calls inside TinyMCE utility. You don't have access to the
  request inside a utility and therefor cannot translate anything.
  [hannosch]

- Factored out resolveuid handling in the TinyMCEOutput parser to a
  lookup_uid method.
  [hannosch]

- Review french translation from Nicolas LAURANCE
  [toutpt]

- Add support for i18nized styles
  [toutpt]

1.1rc6 (2009-10-12)
-------------------

- Moved skin layer up.
  [robgietema]

- Added an `icon_expr` to the control panel entry.
  [hannosch]

- Fixed bug when editing the same field twice using inline editing.
  [robgietema]

- Fixed bug where lists couldn't get custom classes (thanks Artur Konstanczak).
  [robgietema]

- Fixed translations for insert image/link button tooltips.
  [robgietema]

- Use a span instead of p tag for the discreet style to allow the remove
  styles command/button to work properly.
  [esteele]

- Corrected spelling of 'contributors' and renamed doc accordingly.
  [rockdj]

- Fixed inserting images and links.
  [optilude]

1.1rc5 (2009-09-30)
-------------------

- Improved test coverage.
  [robgietema]

- Moved inline style from templates to css files.
  [maartenkling]

- Removed inline style  style="display:none;" from body tag from templates.
  [maartenkling]

- Fixed bug where custom image classes wouldn't stick after editing an image.
  [robgietema]
